gungraun/tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.stderr
error: Only one parameter of `file`, `args` or `iter` can be present
 --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:7:16
  |
7 |     #[benches::some(iter = 1..=2, args = [0, 1])]
  |                ^^^^

error: Duplicate argument: `iter`

         = help: `iter` is allowed only once

  --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:17:35
   |
17 |     #[benches::some(iter = 1..=2, iter = vec![0, 1])]
   |                                   ^^^^^^^^^^^^^^^^^

error: The benchmark function can only take exactly one argument if the iter parameter is present

         = help: fn benchmark_function(arg: String) ...
         = note: If you need more than one argument you can use a tuple as input and
           destruct it in the function signature. Example:

           #[benches::some_id(iter = vec![(1, 2)])]
           fn benchmark_function((first, second): (u64, u64)) -> usize { ... }

  --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:28:8
   |
28 |     fn bench_10() -> gungraun::Command {
   |        ^^^^^^^^

error: The benchmark function can only take exactly one argument if the iter parameter is present

         = help: fn benchmark_function(arg: String) ...
         = note: If you need more than one argument you can use a tuple as input and
           destruct it in the function signature. Example:

           #[benches::some_id(iter = vec![(1, 2)])]
           fn benchmark_function((first, second): (u64, u64)) -> usize { ... }

  --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:64:8
   |
64 |     fn bench_10(a: u64, b: u64) -> gungraun::Command {
   |        ^^^^^^^^

error[E0689]: can't call method `into_iter` on ambiguous numeric type `{integer}`
  --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:52:5
   |
52 |     #[binary_benchmark]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `binary_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you must specify a type for this binding, like `i32`
   |
52 |     #[binary_benchmark]: i32
   |                        +++++

error[E0308]: mismatched types
  --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:72:5
   |
72 |     #[binary_benchmark]
   |     ^^^^^^^^^^^^^^^^^^^- help: try using a conversion method: `.to_string()`
   |     |
   |     expected `String`, found integer
73 |     #[benches::some(iter = 1..=2)]
74 |     fn bench_10(a: String) -> gungraun::Command {
   |        -------- arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:74:8
   |
74 |     fn bench_10(a: String) -> gungraun::Command {
   |        ^^^^^^^^ ---------
   = note: this error originates in the attribute macro `binary_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:86:5
   |
86 |     #[binary_benchmark]
   |     ^^^^^^^^^^^^^^^^^^^- help: try using a conversion method: `.to_string()`
   |     |
   |     expected `String`, found integer
87 |     #[benches::some(iter = 1..=2, setup = setup)]
   |                                           ----- arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:82:8
   |
82 |     fn setup(a: String) -> u64 {
   |        ^^^^^ ---------
   = note: this error originates in the attribute macro `binary_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:100:5
    |
100 |     #[binary_benchmark]
    |     ^^^^^^^^^^^^^^^^^^^- help: try using a conversion method: `.to_string()`
    |     |
    |     expected `String`, found integer
101 |     #[benches::some(iter = 1..=2, teardown = teardown)]
    |                                              -------- arguments to this function are incorrect
    |
note: function defined here
   --> tests/ui/bin_bench/test_binary_benchmark_iter_when_invalid.rs:96:8
    |
96  |     fn teardown(a: String) -> u64 {
    |        ^^^^^^^^ ---------
    = note: this error originates in the attribute macro `binary_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)
